--- a/website/ccp/test/datetime.html
+++ b/website/ccp/test/datetime.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.css"/ >
 <script src="scripts/jquery/jquery-3.2.1.js"></script>
-<script src="scripts/jquery/jquery.datetimepicker.full.min.js"></script>
+<script src="scripts/jquery/jquery.datetimepicker.full.js"></script>
 <script>
 $(document).ready(function() {
   $('#datetimepicker').datetimepicker(
