Fixes for mobile testing on test site

--- a/website/ccp/test/home.html
+++ b/website/ccp/test/home.html
@@ -21,7 +21,7 @@
  <script src="../scripts/jqueryLocal.js"></script>
  <script src="../scripts/dataTablesLocal.js"></script>
  <script src="../scripts/urlSearchParams.js"></script>
- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+ <script src="https://kit.fontawesome.com/c9cf137722.js" crossorigin="anonymous"></script>
  <script src="../scripts/top5.js"></script>
   <style>
 /* Variables
@@ -80,7 +80,7 @@ body {
   border-top: none;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
   margin: 0 auto;
   /*max-width: 500px;*/
   min-height: 100%;
