--- a/website/ccp/test/login.html
+++ b/website/ccp/test/login.html
@@ -6,7 +6,7 @@
   <title>
    Chip Chair and a Prayer Login
   </title>
-  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <script src="https://kit.fontawesome.com/c9cf137722.js" crossorigin="anonymous"></script>
   <style>
 /* Variables
 ================================== */
@@ -64,7 +64,7 @@ body {
   border-top: none;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
   margin: 0 auto;
   max-width: 500px;
   min-height: 100%;
