--- a/website/ccp/test/works.html
+++ b/website/ccp/test/works.html
@@ -92,7 +92,7 @@ body {
   padding: 2em;
   max-width: 800px;
   font-family: 'Josefin Sans', sans-serif;
-  font-size: 1.2em;
+  /*font-size: 1.2em;*/
   background-color: white;
   border: double 3px #DDD;
   border-top: none;
