--- a/website/ccp/test/chart.html
+++ b/website/ccp/test/chart.html
@@ -24,7 +24,7 @@
  <script src="../scripts/jqueryLocal.js"></script>
  <script src="../scripts/dataTablesLocal.js"></script>
  <script src="../scripts/urlSearchParams.js"></script>
- <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+ <script src="https://kit.fontawesome.com/c9cf137722.js" crossorigin="anonymous"></script>
  <script src="../scripts/top5.js"></script>
 </head>
 <body>
