--- a/website/ccp/test/dialog.html
+++ b/website/ccp/test/dialog.html
@@ -65,7 +65,6 @@
   <script src="../scripts/jquery/jquery-migrate.js"></script>
   <script src="../scripts/jquery/datatables.js" type="text/javascript"></script>
   <script src="../scripts/jquery/jquery.datetimepicker.full.js" type="text/javascript"></script>
-  <script src="../scripts/jquery/jquery.smartmenus.js" type="text/javascript"></script>
   <script src="../scripts/jquery/jquery.mask.js" type="text/javascript"></script>
   <script src="../scripts/scripts.js" type="text/javascript"></script>
   <script src="../scripts/jqueryLocal.js" type="text/javascript"></script>
@@ -117,6 +116,7 @@
   </script>
  </head>
  <body>
+  <form action="test.html" id="test" method="post" name="test">
   <dialog id="favDialog">
    <form method="dialog">
     <p>
@@ -1562,5 +1562,6 @@
       </footer>
     </form>
   </dialog>
+  </form>
  </body>
 </html>
